--- a/project/static/css/common.css
+++ b/project/static/css/common.css
@@ -1,6 +1,39 @@
+html{font-size:62.5%;}
+ @media only screen and (min-width: 320px){
+   html {
+        font-size: 62.5% !important;
+       }
+ }
+ @media only screen and (min-width: 640px){
+   html {
+         font-size: 125% !important;
+      }
+ }
+ @media only screen and (min-width: 750px){
+   html {
+         font-size: 150% !important;
+       }
+ }
+ @media only screen and (min-width: 1242px){
+   html {
+         font-size: 187.5% !important;
+       }
+ }
 .color-blue{
-  color: blue;
+  color: #409eff;
 }
 .font-size-18{
-  font-size: 18px;
+  font-size: 1.8rem;
+}
+.display-inline-block{
+  display: inline-block;
+}
+.position-relative{
+  position: relative;
+}
+.bg-blue{
+  background: #409eff;
+}
+.bg-orange{
+  background: orange;
 }
